--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,13 +9,10 @@ environment:
     secure: tumuXLL8PU75WMnRDemRy02ruEq2RpNxeK3dz0MjFssnosPm2v4EFjfNB4PTotA1
 
   matrix:
-    - CONFIG: win_c_compilervs2008cxx_compilervs2008python2.7
+    - CONFIG: win_c_compilervs2008cxx_compilervs2008
       CONDA_INSTALL_LOCN: C:\Miniconda36-x64
 
-    - CONFIG: win_c_compilervs2015cxx_compilervs2015python3.5
-      CONDA_INSTALL_LOCN: C:\Miniconda36-x64
-
-    - CONFIG: win_c_compilervs2015cxx_compilervs2015python3.6
+    - CONFIG: win_c_compilervs2015cxx_compilervs2015
       CONDA_INSTALL_LOCN: C:\Miniconda36-x64
 
 
@@ -45,6 +42,7 @@ install:
     - cmd: conda.exe config --remove channels defaults
     - cmd: conda.exe config --add channels defaults
     - cmd: conda.exe config --add channels conda-forge
+    - cmd: conda.exe config --add channels ramonaoptics
 
     # Configure the VM.
     - cmd: conda.exe install -n root --quiet --yes conda-forge-ci-setup=1
@@ -56,4 +54,4 @@ build: off
 test_script:
     - conda.exe build recipe -m .ci_support\%CONFIG%.yaml --quiet
 deploy_script:
-    - cmd: upload_or_check_non_existence .\recipe conda-forge --channel=main -m .ci_support\%CONFIG%.yaml
+    - cmd: upload_or_check_non_existence .\recipe ramonaoptics --channel=main -m .ci_support\%CONFIG%.yaml
